--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -1,5 +1,5 @@
 body {
-    background: linear-gradient(135deg, #f5f7fa, #c3cfe2);
+    background: linear-gradient(135deg, #6ebff2a9, #000000);
     color: #333;
     font-family: 'Poppins', sans-serif;
     display: flex;
@@ -23,10 +23,12 @@ body {
 }
 
 .msg_parent {
+    border: none;
     flex-grow: 1;
     padding: 20px;
     overflow-y: auto;
-    background-color: #fafafa;
+    background-color: #1e1f1fe1;
+
 }
 
 .message {
@@ -46,16 +48,17 @@ body {
 
 .message.sent {
     align-self: flex-end;
-    background-color: #6c5ce7;
-    color: #fff;
+    background-color: #272727ed;
+    color:  #6ebff2a9;
     border-bottom-right-radius: 0;
     height: fit-content;
+    width: fit-content;
 }
 
 .message.received {
     align-self: flex-start;
     background-color: #f1f1f1;
-    color: #333;
+    color: #aba461;
     border-bottom-left-radius: 0;
 }
 
@@ -78,9 +81,9 @@ body {
 .chatbox {
     display: flex;
     align-items: center;
-    background-color: #fff;
+    background-color: #000000dc;
     padding: 15px 20px;
-    border-top: 1px solid #e0e0e0;
+    border-top: 1px solid  #6ebff2a9;
     box-shadow: 0px -5px 10px rgba(0, 0, 0, 0.05);
  
 }
@@ -89,11 +92,11 @@ input[type="text"] {
     flex-grow: 1;
     padding: 15px;
     border-radius: 25px;
-    border: 1px solid #ddd;
+    border: 1px solid  #6ebff2a9;
     margin-right: 15px;
     font-size: 16px;
     outline: none;
-    background-color: #f9f9f9;
+    background-color: #1f1e1e;
     box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.05);
 }
 
@@ -104,13 +107,13 @@ input[type="file"] {
 label[for="file-upload"] {
     cursor: pointer;
     font-size: 20px;
-    color: #6c5ce7;
+    color:  #6ebff2a9;
 }
 
 .send-button {
     background-color: transparent;
     border: none;
-    color: #6c5ce7;
+    color:  #6ebff2a9;
     padding: 12px 20px;
     border-radius: 50px;
     cursor: pointer;
@@ -120,4 +123,8 @@ label[for="file-upload"] {
 
 .fromlabel{
     height: fit-content;
+}
+
+.msg_parent::-webkit-scrollbar {
+    display: none; /* Hides the scrollbar */
 }
