--- a/src/components/Home.css
+++ b/src/components/Home.css
@@ -88,7 +88,7 @@ body {
  
 }
 
-input[type="text"] {
+.chatbox input[type="text"] {
     flex-grow: 1;
     padding: 15px;
     border-radius: 25px;
@@ -98,6 +98,7 @@ input[type="text"] {
     outline: none;
     background-color: #1f1e1e;
     box-shadow: inset 0 3px 6px rgba(0, 0, 0, 0.05);
+    color: rgb(43, 126, 159);
 }
 
 input[type="file"] {
